fix sound and z-indexes

--- a/src/assets/styles/menu.scss
+++ b/src/assets/styles/menu.scss
@@ -9,6 +9,7 @@
   opacity: 1;
   background-color: #292929;
   transition: all 0.2s linear;
+  z-index: 10;
 
   .game-menu-content {
     width: fit-content;
